// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.ui;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/ui";

// ScreenRecorderService allows basic remote operations of the Nearby Share
// feature.
service ScreenRecorderService {
  // Start creates a new media recorder and starts to record the screen.
  // There can be only a single recording in progress at a time.
  rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // StopSaveRelease stops, saves the recording to the specified location and
  // releases the screen recorder.
  rpc StopSaveRelease(StopSaveReleaseRequest) returns (google.protobuf.Empty) {}
}

message StopSaveReleaseRequest {
  // FileName specified the location in the file system where the recording will
  // be saved.
  string file_name = 1;
}